--- a/404.html
+++ b/404.html
@@ -6,7 +6,6 @@
     <link rel="icon" href="https://user-images.githubusercontent.com/62671277/77897976-b49d3680-727a-11ea-959d-c5a327566e06.png" type="image/png" />
     <meta name="msapplication-navbutton-color" content="#ffffff">
     <meta name="apple-mobile-web-app-status-bar-style" content="##ffffff">
-    <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">   
   </head>
   
   <body>
@@ -16,16 +15,15 @@
       <li><a href="http://umbrelladryeradvanced.github.io/immagini" style="color: rgb(250,255,250); margin-left: 50px"><font size="2">Immagini</font></a></li>
       <li><a href="http://umbrelladryeradvanced.github.io/informazioni" style="color: rgb(250,255,250); margin-left: 50px"><font size="2">Informazioni</font></a></li>
      </ul>
-      <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
-      <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
+      <h1><strong>UMBRELLA DRYER ADVANCED</strong></h1>
+      <h2><strong>MAESTRI NELL'ASCIUGATURA</strong></h2>
     </header>
     <article>
-    <h1 style="color: rgb(255,0,0)"> ERROR 404 </h1>
-    <a href="http://umbrelladryeradvanced.github.io" style="color: rgb(252, 111, 3);font-size: 50px">Redirect</a>
+    <h1 style="color: rgb(255,0,0); text-align: center"> ERROR 404 </h1>
+    <a href="http://umbrelladryeradvanced.github.io" style="color: rgb(252, 111, 3); text-align: center ;font-size: 50px">Redirect</a>
     </article>
 
     <main id="content" class="main-content" role="main">
-      {{ content }}
       <style>
         header {  
           padding-top: 0;
