--- a/404.html
+++ b/404.html
@@ -19,8 +19,10 @@
       <h2><strong>MAESTRI NELL'ASCIUGATURA</strong></h2>
     </header>
     <article>
-    <h1 style="color: rgb(255,0,0); text-align: center; font-size: 50px"> ERROR 404 </h1>
-    <a href="http://umbrelladryeradvanced.github.io" style="color: rgb(252, 111, 3); text-align:center; font-size: 30px">Redirect</a>
+      <div style="text-align:center">   
+    <h1 style="color: rgb(255,0,0); font-size: 50px"> ERROR 404 </h1>
+    <a href="http://umbrelladryeradvanced.github.io" style="color: rgb(252, 111, 3); font-size: 30px">Redirect</a>
+        </div>
     </article>
 
     <main id="content" class="main-content" role="main">
