--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 
     <header>
      <ul class="lista-footer">
-      <li><a href="https://umbrelladryeradvanced.github.io/udatest.github.io/immagini" style="color: rgb(250,255,250); margin-left: 50px"><font size="2">Immagini</font></a></li>
-      <li><a href="https://umbrelladryeradvanced.github.io/udatest.github.io/informazioni" style="color: rgb(250,255,250); margin-left: 50px"><font size="2">Informazioni</font></a></li>
+      <li><a href="https://umbrelladryeradvanced.github.io/immagini" style="color: rgb(250,255,250); margin-left: 50px"><font size="2">Immagini</font></a></li>
+      <li><a href="https://umbrelladryeradvanced.github.io/informazioni" style="color: rgb(250,255,250); margin-left: 50px"><font size="2">Informazioni</font></a></li>
      </ul>
       <h1>umbrella dryer advanced</h1>
       <h2>maestri nell'asciugatura</h2>
@@ -101,7 +101,7 @@
     <article>
   		<img src="https://user-images.githubusercontent.com/62671277/77656689-86ff7700-6f74-11ea-9265-18794c936979.png" alt="Logo3" style="max-width: 100%">
   		<ul>
-  			<li><a href="https://umbrelladryeradvanced.github.io/udatest.github.io/immagini" style="color: rgb(255, 0, 0)"><strong>Galleria Immagini</strong></a></li>
+  			<li><a href="https://umbrelladryeradvanced.github.io/immagini" style="color: rgb(255, 0, 0)"><strong>Galleria Immagini</strong></a></li>
   			<li><a href="https://umbrelladryeradvanced.github.io/informazioni" style="color: rgb(255, 0, 0)"><strong>Scopri di più</strong></a></li>
   			<li><a href="https://www.youtube.com/watch?v=PSi09nxiyHA" style="color: rgb(255, 0, 0)"><strong>Sei Maria Grazia da Bassano? Guarda qui</strong></a></li>
   		</ul>
