--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta name="theme-color" content="##ffffff">
     <link rel="icon" href="https://user-images.githubusercontent.com/62671277/77897976-b49d3680-727a-11ea-959d-c5a327566e06.png" type="image/png" />
     <meta name="msapplication-navbutton-color" content="#ffffff">
-    <meta name="apple-mobile-web-app-status-bar-style" content="##ffffff"> 
+    <meta name="apple-mobile-web-app-status-bar-style" content="##ffffff">
+    <title>Umbrella Dryer Advanced</title>
   </head>
-  
+
   <style>
     html {
       font-family: sans-serif;
@@ -30,17 +31,18 @@
       text-decoration: none;
       }
     header {
+      margin-top: 0;
       padding-top: 0;
       top: 0;
       background: rgb(223,17,198);
       background: linear-gradient(180deg, rgba(223,17,198,1) 11%, rgba(230,105,9,1) 49%, rgba(255,0,39,1) 82%);
       height: 250px;
       }
-    ul.lista-header { 
+    ul.lista-header {
       padding-left: 0;
     }
     ul.lista-header li {
-      margin-right: 15px;      
+      margin-right: 15px;
       display: inline-block;
     }
     header h1 {
@@ -83,16 +85,16 @@
     }
    ul.lista-footer li {
       display: inline-block;
-      margin-right: 15px;      
+      margin-right: 15px;
    }
    </style>
-   
+
   <body>
 
     <header>
      <ul class="lista-footer">
-      <li><a href="https://umbrelladryeradvanced.github.io/immagini.html" style="color: rgb(250,255,250); margin-left: 50px"><font size="2">Immagini</font></a></li>
-      <li><a href="https://umbrelladryeradvanced.github.io/informazioni.html" style="color: rgb(250,255,250); margin-left: 50px"><font size="2">Informazioni</font></a></li>
+      <li><a href="https://umbrelladryeradvanced.github.io/udatest.github.io/immagini" style="color: rgb(250,255,250); margin-left: 50px"><font size="2">Immagini</font></a></li>
+      <li><a href="https://umbrelladryeradvanced.github.io/udatest.github.io/informazioni" style="color: rgb(250,255,250); margin-left: 50px"><font size="2">Informazioni</font></a></li>
      </ul>
       <h1>umbrella dryer advanced</h1>
       <h2>maestri nell'asciugatura</h2>
@@ -101,8 +103,8 @@
     <article>
   		<img src="https://user-images.githubusercontent.com/62671277/77656689-86ff7700-6f74-11ea-9265-18794c936979.png" alt="Logo3" style="max-width: 100%">
   		<ul>
-  			<li><a href="https://umbrelladryeradvanced.github.io/immagini.html" style="color: rgb(255, 0, 0)"><strong>Galleria Immagini</strong></a></li>
-  			<li><a href="https://umbrelladryeradvanced.github.io/informazioni.html" style="color: rgb(255, 0, 0)"><strong>Scopri di più</strong></a></li>
+  			<li><a href="https://umbrelladryeradvanced.github.io/udatest.github.io/immagini" style="color: rgb(255, 0, 0)"><strong>Galleria Immagini</strong></a></li>
+  			<li><a href="https://umbrelladryeradvanced.github.io/informazioni" style="color: rgb(255, 0, 0)"><strong>Scopri di più</strong></a></li>
   			<li><a href="https://www.youtube.com/watch?v=PSi09nxiyHA" style="color: rgb(255, 0, 0)"><strong>Sei Maria Grazia da Bassano? Guarda qui</strong></a></li>
   		</ul>
   		<br/>
@@ -112,7 +114,7 @@
   			Umbrella Dryer Advanced è un’azienda che si è inserita nel mercato con l'obiettivo di portare un’idea innovativa, che possa essere utile nella quotidianità.
   			L’azienda punta sul diffondere sul mercato Europeo questo prodotto, il quale è attualmente diffuso unicamente in Oriente e in America. La nostra idea nasce
   			dalle piccole inconvenienze quotidiane: un ombrello bagnato che sporca e inumidisce i vestiti, pozze d’acqua sparse in giro. Abbiamo quindi colto l’occasione
-  			di questo progetto per poter mettere in atto la nostra idea: 
+  			di questo progetto per poter mettere in atto la nostra idea:
   			<br/>
   			<strong>un asciuga ombrelli</strong>.
   			<br/>
@@ -121,7 +123,7 @@
   		Nel breve termine, contiamo di riuscire a vendere piccole quantità di prodotti, con il fine di raccogliere i fondi necessari per far prendere piede all’azienda. Nel lungo termine invece, puntiamo ad espanderci per poter non solo diffondere il prodotto dovunque sia possibile, ma anche per poter trattare altri prodotti non ancora presenti in Europa.
   		</p>
   	</article>
-  
+
        <footer>
          <div id="first"></div>
            <ul class="lista-footer">
