--- a/404.html
+++ b/404.html
@@ -103,7 +103,7 @@
     <article>
       <div style="text-align:center">   
         <h1 style="color: rgb(255,0,0); font-size: 50px"> ERROR 404 </h1>
-        <a href="https://umbrelladryeradvanced.github.io/udatest.github.io/" style="color: rgb(252, 111, 3); font-size: 30px">Redirect</a>
+        <a href="https://umbrelladryeradvanced.github.io/udatest.github.io/" style="color: rgb(252, 111, 3); font-size: 30px">REDIRECT</a>
       </div>
   	</article>
   
