--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
 
   <style>
     html {
-      font-family: sans-serif;
+      font-family: Arial, Helvetica, sans-serif;;
       -ms-text-size-adjust: 100%;
       -webkit-text-size-adjust: 100%;
       display: block;
-      color: -internal-root-color;
     }
     * {
       box-sizing: border-box;
