--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     ul.lista-header li {
       margin-right: 15px;
       display: inline-block;
+      font-size: 0.9rem;
     }
     header h1 {
       color: #ffffff;
@@ -85,6 +86,7 @@
    ul.lista-footer li {
       display: inline-block;
       margin-right: 15px;
+      font-size: 0.9rem;
    }
    </style>
 
