--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <style>
     html {
-      font-family: Arial, Helvetica, sans-serif;;
+      font-family: Arial, Helvetica, sans-serif;
       -ms-text-size-adjust: 100%;
       -webkit-text-size-adjust: 100%;
       display: block;
