--- a/immagini.html
+++ b/immagini.html
@@ -98,8 +98,8 @@
 
     <header>
      <ul class="lista-footer">
-      <li><a href="https://umbrelladryeradvanced.github.io/udatest.github.io/immagini" style="color: rgb(250,255,250); margin-left: 50px"><font size="2">Immagini</font></a></li>
-      <li><a href="https://umbrelladryeradvanced.github.io/udatest.github.io/informazioni" style="color: rgb(250,255,250); margin-left: 50px"><font size="2">Informazioni</font></a></li>
+      <li><a href="https://umbrelladryeradvanced.github.io/immagini" style="color: rgb(250,255,250); margin-left: 50px"><font size="2">Immagini</font></a></li>
+      <li><a href="https://umbrelladryeradvanced.github.io/informazioni" style="color: rgb(250,255,250); margin-left: 50px"><font size="2">Informazioni</font></a></li>
      </ul>
       <h1>umbrella dryer advanced</h1>
       <h2>maestri nell'asciugatura</h2>
