--- a/immagini.html
+++ b/immagini.html
@@ -3,103 +3,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="##ffffff">
+    <link rel="stylesheet" href="style.css">
     <link rel="icon" href="https://user-images.githubusercontent.com/62671277/77897976-b49d3680-727a-11ea-959d-c5a327566e06.png" type="image/png" />
     <meta name="msapplication-navbutton-color" content="#ffffff">
     <meta name="apple-mobile-web-app-status-bar-style" content="##ffffff">
     <title>Umbrella Dryer Advanced</title>
   </head>
 
-  <style>
-    html {
-      font-family: Arial, Helvetica, sans-serif;
-      -ms-text-size-adjust: 100%;
-      -webkit-text-size-adjust: 100%;
-      display: block;
-    }
-    * {
-      box-sizing: border-box;
-    }
-    body {
-      margin: 0px;
-      padding-top: 0px;
-      font-size: 16px;
-      line-height: 1.5;
-      color: #606c71;
-      }
-    a {
-      text-decoration: none;
-      }
-    header {
-      margin-top: 0;
-      padding-top: 0;
-      top: 0;
-      background: rgb(223,17,198);
-      background: linear-gradient(180deg, rgba(223,17,198,1) 11%, rgba(230,105,9,1) 49%, rgba(255,0,39,1) 82%);
-      height: 250px;
-      }
-    ul.lista-header {
-      padding-left: 0;
-    }
-    ul.lista-header li {
-      margin-right: 15px;
-      display: inline-block;
-    }
-    header h1 {
-      color: #ffffff;
-      text-transform: uppercase;
-      text-align: center;
-      font-size: 2.25rem;
-      margin-top: 0;
-      margin-bottom: 0.1rem;
-    }
-    header h2 {
-      color: #ffffff;
-      text-transform: uppercase;
-      text-align: center;
-      font-size: 1.15rem;
-      margin-bottom: 2rem;
-      font-weight: normal;
-      opacity: 0.7;
-    }
-    article {
-      line-height: 1.5;
-      margin-bottom: 1em;
-      padding-left: 20%;
-      padding-right: 20%;
-      padding-top: 0px;
-      padding-bottom: 10%;
-      font-size: 1.3rem;
-      word-wrap: break-word;
-    }
-    article h1 {
-      text-align: center;
-      color: #ff0000;
-      text-transform: uppercase;
-      font-size: 1.25rem;
-    }
-    footer{
-      position: fixed;
-      left: 0;
-      bottom: 0;
-      width: 100%;
-      text-align: center;
-      background: rgb(255,0,0);
-   }
-   ul.lista-footer {
-       padding-left: 0;
-    }
-   ul.lista-footer li {
-      display: inline-block;
-      margin-right: 15px;
-   }
-   </style>
-
   <body>
 
     <header>
      <ul class="lista-footer">
-      <li><a href="https://umbrelladryeradvanced.github.io/immagini" style="color: rgb(250,255,250); margin-left: 50px"><font size="2">Immagini</font></a></li>
-      <li><a href="https://umbrelladryeradvanced.github.io/informazioni" style="color: rgb(250,255,250); margin-left: 50px"><font size="2">Informazioni</font></a></li>
+      <li><a href="immagini.html" style="color: rgb(250,255,250); margin-left: 50px"><font size="2">Immagini</font></a></li>
+      <li><a href="informazioni.html" style="color: rgb(250,255,250); margin-left: 50px"><font size="2">Informazioni</font></a></li>
      </ul>
       <h1>umbrella dryer advanced</h1>
       <h2>maestri nell'asciugatura</h2>
