--- a/404.html
+++ b/404.html
@@ -1,39 +1,37 @@
-    <!DOCTYPE html>
-      <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="theme-color" content="##ffffff">
-        <link rel="icon" href="https://user-images.githubusercontent.com/62671277/77897976-b49d3680-727a-11ea-959d-c5a327566e06.png" type="image/png" />
-        <meta name="msapplication-navbutton-color" content="#ffffff">
-        <meta name="apple-mobile-web-app-status-bar-style" content="##ffffff">
-        <title>Umbrella Dryer Advanced</title>
-      </head>
+<!DOCTYPE html>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="##ffffff">
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="https://user-images.githubusercontent.com/62671277/77897976-b49d3680-727a-11ea-959d-c5a327566e06.png" type="image/png" />
+    <meta name="msapplication-navbutton-color" content="#ffffff">
+    <meta name="apple-mobile-web-app-status-bar-style" content="##ffffff">
+    <title>Umbrella Dryer Advanced</title>
+    <script
+        src="https://code.jquery.com/jquery-3.3.1.js"
+        integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+        crossorigin="anonymous">
+    </script>
+    <script>
+    $(function(){
+      $("#header").load("header.html");
+      $("#footer").load("footer.html");
+    });
+    </script>
+  </head>
 
-      <body>
+  <body>
+    <div id="header"></div>
 
-        <header>
-         <ul class="lista-footer">
-          <li><a href="https://umbrelladryeradvanced.github.io/immagini" style="color: rgb(250,255,250); margin-left: 50px"><font size="2">Immagini</font></a></li>
-          <li><a href="https://umbrelladryeradvanced.github.io/informazioni" style="color: rgb(250,255,250); margin-left: 50px"><font size="2">Informazioni</font></a></li>
-         </ul>
-          <h1>umbrella dryer advanced</h1>
-          <h2>maestri nell'asciugatura</h2>
-        </header>
+    <article>
+      <div style="text-align:center">
+        <h1 style="color: rgb(255,0,0); font-size: 50px"> ERROR 404 </h1>
+        <a href="https://umbrelladryeradvanced.github.io" style="color: rgb(252, 111, 3); font-size: 30px">Redirect</a>
+        </div>
+    </article>
 
-            <article>
-              <div style="text-align:center">
-                <h1 style="color: rgb(255,0,0); font-size: 50px"> ERROR 404 </h1>
-                <a href="https://umbrelladryeradvanced.github.io" style="color: rgb(252, 111, 3); font-size: 30px">Redirect</a>
-              </div>
-          	</article>
-
-           <footer>
-             <div id="first"></div>
-               <ul class="lista-footer">
-                 <li><a href="mailto:giorgiutti.cristian2@gmail.com" style="color: rgb(250,255,250)"><strong><font size="2">Contattaci via Email</font></strong></a></li>
-                 <li><a href="https://github.com/UmbrellaDryerAdvanced" style="color: rgb(250,255,250)"><strong><font size="2">Contattaci via GitHub</font></strong></a></li>
-               </ul>
-           </footer>
-        </main>
-      </body>
-    </html>
+    <div id="footer"></div>
+   </main>
+ </body>
+</html>
