--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,6 @@
-<ul class="lista-footer">
-    <li><a href="mailto:giorgiutti.cristian2@gmail.com">Contattaci via Email</a></li>
-    <li><a href="https://github.com/UmbrellaDryerAdvanced">Contattaci via GitHub</a></li>
-</ul>
+<footer>
+  <ul class="lista-footer">
+      <li><a href="mailto:giorgiutti.cristian2@gmail.com">Contattaci via Email</a></li>
+      <li><a href="https://github.com/UmbrellaDryerAdvanced">Contattaci via GitHub</a></li>
+  </ul>
+</footer>
