--- a/immagini.html
+++ b/immagini.html
@@ -8,30 +8,27 @@
     <meta name="msapplication-navbutton-color" content="#ffffff">
     <meta name="apple-mobile-web-app-status-bar-style" content="##ffffff">
     <title>Umbrella Dryer Advanced</title>
+    <script
+        src="https://code.jquery.com/jquery-3.3.1.js"
+        integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+        crossorigin="anonymous">
+    </script>
+    <script>
+    $(function(){
+      $("#header").load("header.html");
+      $("#footer").load("footer.html");
+    });
+    </script>
   </head>
 
   <body>
-
-    <header>
-     <ul class="lista-footer">
-      <li><a href="immagini.html" style="color: rgb(250,255,250); margin-left: 50px"><font size="2">Immagini</font></a></li>
-      <li><a href="informazioni.html" style="color: rgb(250,255,250); margin-left: 50px"><font size="2">Informazioni</font></a></li>
-     </ul>
-      <h1>umbrella dryer advanced</h1>
-      <h2>maestri nell'asciugatura</h2>
-    </header>
+    <div id="header"></div>
 
     <article>
-  	   <h1>Galleria immagini del prototipo<h1>
+  	   <h1>Galleria immagini<h1>
   	</article>
 
-       <footer>
-         <div id="first"></div>
-           <ul class="lista-footer">
-             <li><a href="mailto:giorgiutti.cristian2@gmail.com" style="color: rgb(250,255,250)"><strong><font size="2">Contattaci via Email</font></strong></a></li>
-             <li><a href="https://github.com/UmbrellaDryerAdvanced" style="color: rgb(250,255,250)"><strong><font size="2">Contattaci via GitHub</font></strong></a></li>
-           </ul>
-       </footer>
-    </main>
-  </body>
+    <div id="footer"></div>
+ </main>
+</body>
 </html>
