--- a/404.html
+++ b/404.html
@@ -22,13 +22,20 @@
   </head>
 
   <body>
+    <style>
+      article {
+        text-align: center;
+      }
+      h1 {
+        color: #ff0000
+      }
+    </style>
     <div id="header"></div>
 
     <article>
-      <div style="text-align:center">
         <h1 style="color: rgb(255,0,0); font-size: 50px"> ERROR 404 </h1>
-        <a href="https://umbrelladryeradvanced.github.io" style="color: rgb(252, 111, 3); font-size: 30px">Redirect</a>
-        </div>
+        <p> Sembra che la pagina che stai cercando non esista <p>
+        <a href="https://umbrelladryeradvanced.github.io">Redirect</a>
     </article>
 
     <div id="footer"></div>
