--- a/footer.html
+++ b/footer.html
@@ -1,6 +1,6 @@
 <footer>
   <ul class="lista-footer">
-      <li><a href="mailto:umbrelladryerofficial@gmail.com">Contattaci via Email</a></li>
+      <li><a href="mailto:giorgiutti.cristian2@gmail.com">Contattaci via Email</a></li>
       <li><a href="https://github.com/UmbrellaDryerAdvanced">Contattaci via GitHub</a></li>
       <li><a href="https://github.com/UmbrellaDryerAdvanced/umbrelladryeradvanced.github.io">Ispeziona codice html</a></li>
   </ul>
