--- a/header.html
+++ b/header.html
@@ -1,8 +1,8 @@
 <header>
+  <img src="https://user-images.githubusercontent.com/62671277/78712192-85409680-7918-11ea-8936-1a5945e2aae8.png" alt="LogoHeader" style="max-width: 9%">
+  <h1><a href="index.html">umbrella dryer advanced</a></h1>
   <ul class="lista-header">
     <li><a href="immagini.html">Immagini</a></li>
     <li><a href="informazioni.html">Informazioni</a></li>
    </ul>
-    <h1><a href="index.html">umbrella dryer advanced</a></h1>
-    <h2>maestri nell'asciugatura</h2>
-</header>
+  </header>
