--- a/immagini.html
+++ b/immagini.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="##ffffff">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="https://user-images.githubusercontent.com/62671277/77897976-b49d3680-727a-11ea-959d-c5a327566e06.png" type="image/png" />
+    <link rel="ihcon" href="https://user-images.githubusercontent.com/62671277/77897976-b49d3680-727a-11ea-959d-c5a327566e06.png" type="image/png" />
     <meta name="msapplication-navbutton-color" content="#ffffff">
     <meta name="apple-mobile-web-app-status-bar-style" content="##ffffff">
     <title>Umbrella Dryer Advanced</title>
@@ -21,11 +21,21 @@
     </script>
   </head>
 
+  <style>
+    p {
+      line-height: 1.5;
+      font-size: 1rem;
+      word-wrap: break-word;
+      color: #c9c9c9;
+    }
+  </style>
+
   <body>
     <div id="header"></div>
 
     <article>
-  	   <h1>Galleria immagini<h1>
+  	  <h1>Galleria immagini<h1>
+      <p>Modello 3D creato con il software FreeCAD<p>
   	</article>
 
     <div id="footer"></div>
