--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="theme-color" content="##ffffff">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="https://user-images.githubusercontent.com/62671277/77897976-b49d3680-727a-11ea-959d-c5a327566e06.png" type="image/png" />
-    <meta name="msapplication-navbutton-color" content="#ffffff">
-    <meta name="apple-mobile-web-app-status-bar-style" content="##ffffff">
+    <meta name="msapplication-navbutton-color" content="#ff0000">
+    <meta name="apple-mobile-web-app-status-bar-style" content="##ff0000">
     <title>Umbrella Dryer Advanced</title>
     <script
         src="https://code.jquery.com/jquery-3.3.1.js"
@@ -25,7 +25,7 @@
     <style>
       article li a {
         color: rgb(255, 0, 0);
-        font-size: 2;
+        font-size: 1.5rem;
         font-weight: bold;
       }
     </style>
@@ -33,7 +33,6 @@
     <div id="header"></div>
 
     <article>
-  		<img src="https://user-images.githubusercontent.com/62671277/77656689-86ff7700-6f74-11ea-9265-18794c936979.png" alt="Logo3" style="max-width: 100%">
   		<ul>
   			<li><a href="immagini.html">Galleria Immagini</a></li>
   			<li><a href="informazioni.html">Scopri di più</a></li>
