--- a/header.html
+++ b/header.html
@@ -4,5 +4,6 @@
   <ul class="lista-header">
     <li><a href="immagini.html">Immagini</a></li>
     <li><a href="informazioni.html">Informazioni</a></li>
+    <li><a href="chiSiamo.html">Chi siamo</a></li>
    </ul>
   </header>
