--- a/immagini.html
+++ b/immagini.html
@@ -28,6 +28,9 @@
       word-wrap: break-word;
       color: #c9c9c9;
     }
+    img {
+      font-size: 0.7rem;
+    }
   </style>
 
   <body>
@@ -35,6 +38,10 @@
 
     <article>
   	  <h1>Galleria immagini<h1>
+      <img src="https://user-images.githubusercontent.com/62671277/79230327-b400c480-7e64-11ea-9de9-bd50c33affda.PNG" alt="Vista modello 1" style="max-width: 50%">
+      <img src="https://user-images.githubusercontent.com/62671277/79230329-b531f180-7e64-11ea-8603-501a3935d6a5.PNG" alt="Vista modello 2" style="max-width: 50%">
+      <img src="https://user-images.githubusercontent.com/62671277/79230331-b531f180-7e64-11ea-8328-84a1066ab98a.PNG" alt="Vista modello 3" style="max-width: 50%">
+      <img src="https://user-images.githubusercontent.com/62671277/79230332-b531f180-7e64-11ea-8947-c9c2af4aa08b.PNG" alt="Vista modello 4" style="max-width: 50%">
       <p>Modello 3D creato con il software FreeCAD<p>
   	</article>
 
