--- a/chiSiamo.html
+++ b/chiSiamo.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="##ffffff">
     <link rel="stylesheet" href="style.css">
-    <link rel="ihcon" href="https://user-images.githubusercontent.com/62671277/77897976-b49d3680-727a-11ea-959d-c5a327566e06.png" type="image/png" />
+    <link rel="icon" href="https://user-images.githubusercontent.com/62671277/77897976-b49d3680-727a-11ea-959d-c5a327566e06.png" type="image/png" />
     <meta name="msapplication-navbutton-color" content="#ffffff">
     <meta name="apple-mobile-web-app-status-bar-style" content="##ffffff">
     <title>Umbrella Dryer Advanced</title>
@@ -20,32 +20,20 @@
     });
     </script>
   </head>
-
-  <style>
-    p {
-      line-height: 1.5;
-      font-size: 1rem;
-      word-wrap: break-word;
-      color: #c9c9c9;
-    }
-    img {
-      font-size: 0.7rem;
-    }
-  </style>
-
   <body>
-    <div id="header"></div>
+  <div id="header"></div>
 
     <article>
-  	  <h1>Galleria immagini<h1>
-      <p><img src="https://user-images.githubusercontent.com/62671277/79230327-b400c480-7e64-11ea-9de9-bd50c33affda.PNG" alt="Vista modello 1" style="max-width: 50%"></p>
-      <p><img src="https://user-images.githubusercontent.com/62671277/79230329-b531f180-7e64-11ea-8603-501a3935d6a5.PNG" alt="Vista modello 2" style="max-width: 50%"></p>
-      <p><img src="https://user-images.githubusercontent.com/62671277/79230331-b531f180-7e64-11ea-8328-84a1066ab98a.PNG" alt="Vista modello 3" style="max-width: 50%"></p>
-      <p><img src="https://user-images.githubusercontent.com/62671277/79230332-b531f180-7e64-11ea-8947-c9c2af4aa08b.PNG" alt="Vista modello 4" style="max-width: 50%"></p>
-      <p>Modello 3D creato con il software FreeCAD<p>
-  	</article>
+      <h1>Chi Siamo</h1>
+        <p>Umbrella Dryer Advanced è un' azienda produttrice di asciuga ombrelli.</p>
+        <p>Siamo giunti alla scelta di questo prodotto in quanto nella regione in cui ha seda la nostra azienda, il Friuli Venezia Giulia,
+          le piogge sono molto frequenti e provocano disagi.</p>
+        <p>Abbiamo intenzione di inserirci nel mercato con l'obiettivo di portare un’idea innovativa, che possa essere utile nella quotidianità.</p>
+        <p>L'azienda Umbrella Dryer advanced è composta da studenti di 4a Telecomunicazioni dell'istituto
+          <a href="http://www.malignani.ud.it">ISIS A. Malignani</a>
+         con molta voglia di fare. </p>
+    </article>
 
     <div id="footer"></div>
- </main>
-</body>
+ </body>
 </html>
