--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
   		<ul>
   			<li><a href="immagini.html">Galleria Immagini</a></li>
   			<li><a href="informazioni.html">Scopri di più</a></li>
+        <li><a href="chiSiamo.html">Chi Siamo</a></li>
   		</ul>
   		<br/>
   		<strong>LA NOSTRA MISSION</strong>
